Fix missing gap between form inputs in Safari
See https://github.com/c-w/boardgames/issues/9

--- a/src/frontend/boards/fitf/index.scss
+++ b/src/frontend/boards/fitf/index.scss
@@ -650,6 +650,12 @@ $black: #000;
   }
 
   &.safari {
+    .rjsf {
+      .field + .field {
+        margin-right: 4px;
+      }
+    }
+
     .card {
       .content.compact {
         .suit::before {
